INCLUDES = -I..
AM_CFLAGS = -L/usr/lib

lib_LTLIBRARIES = libgds.la
libgds_la_LDFLAGS = -no-undefined -release $(LIBGDS_LT_RELEASE)
libgds_la_LIBADD = -lm -lz
libgdsinclude_HEADERS = \
	array.h \
	assoc_array.h \
	bit_vector.h \
	bloom_hash.h \
	bloom_filter.h \
	cli.h \
	cli_commands.h \
	cli_ctx.h \
	cli_params.h \
	dllist.h \
	enumerator.h \
	fifo.h \
	gds.h \
	hash.h \
	hash_utils.h \
	libgds-config.h \
	list.h \
	params.h \
	patricia-tree.h \
	memory.h \
	radix-tree.h \
	rand.h \
	sequence.h \
	sha1.h \
	stack.h \
	str_util.h \
	stream.h \
	stream_cmd.h \
	tokenizer.h \
	tokens.h \
	types.h \
	utest.h \
	xml.h 

libgdsincludedir = $(includedir)/libgds

libgds_la_SOURCES =\
	array.c \
	array.h \
	assoc_array.c \
	assoc_array.h \
	bit_vector.c \
	bloom_hash.c \
	bloom_filter.c \
	cli.c \
	cli.h \
	cli_commands.h \
	cli_ctx.c \
	cli_ctx.h \
	cli_params.c \
	cli_params.h \
	dllist.c \
	enumerator.c \
	enumerator.h \
	fifo.c \
	fifo.h \
	gds.c \
	hash.c \
	hash.h \
	hash_utils.c \
	list.c \
	memory.c \
	memory.h \
	memory_debug.c \
	memory_debug.h \
	params.c \
	params.h \
	patricia-tree.c \
	patricia-tree.h \
	radix-tree.c \
	radix-tree.h \
	rand.c \
	sequence.c \
	sha1.c \
	stack.c \
	str_util.c \
	stream.c \
	stream.h \
	stream_cmd.c \
	stream_cmd.h \
	tokenizer.c \
	tokenizer.h \
	tokens.c \
	tokens.h \
	utest.c \
	utest.h \
	xml.c \
	bit_vector.h \
	bloom_hash.h \
	bloom_filter.h \
	dllist.h \
	gds.h \
	hash_utils.h \
	list.h \
	rand.h \
	sequence.h \
	sha1.h \
	stack.h \
	str_util.h \
	types.h \
	xml.h
