INCLUDES = -I..
AM_CFLAGS = -Wall -Werror -O2

lib_LIBRARIES = libgds.a
libgdsinclude_HEADERS = array.h cli.h cli_ctx.h fifo.h list.h log.h memory.h radix-tree.h rand.h sequence.h stack.h str_util.h tokenizer.h tokens.h types.h
libgdsincludedir = $(includedir)/libgds

libgds_a_SOURCES =\
	array.c \
	cli.c \
	cli_ctx.c \
	fifo.c \
	list.c \
	log.c \
	memory.c \
	radix-tree.c \
	rand.c \
	sequence.c \
	stack.c \
	str_util.c \
	tokenizer.c \
	tokens.c \
	array.h \
	cli.h \
	cli_ctx.h \
	fifo.h \
	list.h \
	log.h \
	memory.h \
	radix-tree.h \
	rand.h \
	sequence.h \
	stack.h \
	str_util.h \
	tokenizer.h \
	tokens.h \
	types.h

